working on session display

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Assets\Scripts\Quest.cs" />
     <Compile Include="Assets\Scripts\JournalQuestLog.cs" />
     <Compile Include="Assets\Telemetry\TelemetrySettings.cs" />
+    <Compile Include="Assets\Scripts\SessionDisplay.cs" />
     <Compile Include="Assets\Scripts\CameraControl.cs" />
     <Compile Include="Assets\Scripts\HelpTestKill.cs" />
     <Compile Include="Assets\Scripts\ClueList.cs" />
